add conditional blocker

--- a/pipelines/templates/gen-usage-nuget.yml
+++ b/pipelines/templates/gen-usage-nuget.yml
@@ -18,15 +18,17 @@ steps:
       scriptType: "bash"
       scriptLocation: "inlineScript"
       inlineScript: |
-        echo "OIDC Token File: $AZURE_FEDERATED_TOKEN_FILE"
+        echo "OIDC Token File: ${AZURE_FEDERATED_TOKEN_FILE:-<not set>}"
 
-        echo "----- RAW TOKEN -----"
-        cat $AZURE_FEDERATED_TOKEN_FILE
+        if [ -n "$AZURE_FEDERATED_TOKEN_FILE" ] && [ -f "$AZURE_FEDERATED_TOKEN_FILE" ]; then
+          echo "----- RAW TOKEN -----"
+          cat "$AZURE_FEDERATED_TOKEN_FILE"
 
-        echo "----- DECODED PAYLOAD -----"
-        cat $AZURE_FEDERATED_TOKEN_FILE | cut -d '.' -f2 | base64 -d | jq
-        cd "$(Build.SourcesDirectory)/src/GenUsageNuGet"
-        dotnet run --configuration $(BuildConfiguration) -- crawl
+          echo "----- DECODED PAYLOAD -----"
+          cut -d '.' -f2 "$AZURE_FEDERATED_TOKEN_FILE" | base64 -d | jq
+        else
+          echo "No OIDC token file available (not using workload identity)."
+        fi
     env:
       AzureStorageServiceUrl: $(AzureStorageServiceUrl)
       ApisOfDotNetWebHookSecret: $(ApisOfDotNetWebHookSecret)
