--- a/pipelines/gen-design-notes.yml
+++ b/pipelines/gen-design-notes.yml
@@ -62,10 +62,20 @@ extends:
                   scriptType: "bash"
                   scriptLocation: "inlineScript"
                   inlineScript: |
-                    az account get-access-token --resource https://storage.azure.com/
+                    
+                    echo "== az account =="
+                    az account show -o jsonc
+
+                    echo "== WIF vars (from addSpnToEnvironment) =="
+                    env | grep -E 'servicePrincipalId|tenantId|idToken' || true
+
+                    echo "== can we get a Storage token? =="
+                    az account get-access-token --resource https://storage.azure.com/ -o jsonc
+ 
 
                     cd "$(Build.SourcesDirectory)/src/GenDesignNotes"
                     dotnet run --configuration $(BuildConfiguration)
                 env:
                   AzureStorageServiceUrl: $(AzureStorageServiceUrl)
                   ApisOfDotNetWebHookSecret: $(ApisOfDotNetWebHookSecret)
+                  addSpnToEnvironment: true
