use env azure storage url

--- a/pipelines/gen-catalog.yml
+++ b/pipelines/gen-catalog.yml
@@ -56,3 +56,5 @@ extends:
                 inputs:
                   command: run
                   projects: src/GenCatalog/GenCatalog.csproj
+                env:
+                  AzureStorageServiceUrl: $(AzureStorageServiceUrl)
