--- a/pipelines/gen-catalog.yml
+++ b/pipelines/gen-catalog.yml
@@ -71,7 +71,9 @@ extends:
                     
                     echo "== can we get a Storage token? =="
                     az account get-access-token --resource https://storage.azure.com/ -o jsonc
- 
+
+                    Write-Host "Files:"
+                    ls
 
                     cd "$(Build.SourcesDirectory)/src/GenCatalog"
                     dotnet run --configuration $(BuildConfiguration)
