Add storage WIF identity test and pipeline step
Add a PowerShell script (automations/Test-StorageWifIdentity.ps1) that validates the current Entra-federated/RBAC identity can access Azure Storage data plane: it prints context, acquires a https://storage.azure.com/ access token, discovers storage accounts, optionally performs a write/read roundtrip (DoWriteReadTest), and emits a result file under GenDesignNotesOutput. Also update pipelines/gen-design-notes.yml to run the script via an AzurePowerShell@5 task so the check runs in the pipeline agent. The script requires Az PowerShell modules (Az.Accounts, Az.Storage) and is intended to be executed in the same environment where the identity is used.

--- a/pipelines/gen-design-notes.yml
+++ b/pipelines/gen-design-notes.yml
@@ -52,6 +52,15 @@ extends:
                   artifactName: WifGenDesignNotesOutput
             steps:
               - checkout: self
+              - task: AzurePowerShell@5
+                displayName: "Test Storage WIF Identity"
+                inputs:
+                  azureSubscription: "$(AzureSubscriptionConnection)"
+                  ScriptType: FilePath
+                  ScriptPath: "$(System.DefaultWorkingDirectory)/automations/Test-StorageWifIdentity.ps1"
+                  azurePowerShellVersion: LatestVersion
+                  pwsh: true
+                  
               - task: UseDotNet@2
                 displayName: Use .NET 8 SDK
                 inputs:
@@ -84,7 +93,7 @@ extends:
  
 
                     cd "$(Build.SourcesDirectory)/src/GenDesignNotes"
-                    dotnet run --configuration $(BuildConfiguration)
+                    # dotnet run --configuration $(BuildConfiguration)
                 env:
                   AzureStorageServiceUrl: $(AzureStorageServiceUrl)
                   ApisOfDotNetWebHookSecret: $(ApisOfDotNetWebHookSecret)
